# webcure

./: .gitignore  .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
python/: pyproject.toml  setup.py
python/webcure/: __init__.py  client.py
src/: apiServer.ts  browserManager.ts  constants.ts  extension.ts  tools.ts  types.ts
src/bridge/: cli-template.js  file-bridge.ts
src/recorder/: action-log.ts  element-rules-engine.ts  script-generator.ts  step-recorder.ts
status/: project_status_01.md  project_status_02.md  project_status_03.md  project_status_04.md  project_status_05.md  project_status_06.md  project_status_07.md  project_status_08.md  project_status_09.md
tests/: MANUAL-TEST-RESULTS.md  bridge-integration-tests.sh  recording.py  tsconfig.json
tests/integration/: live_engine_test.py  test_assertions.py  test_recorded_assertions.py
tests/unit/: element-rules-engine.test.ts  step-recorder.test.ts  tools.test.ts
